Added html base and app style

--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="shortcut icon" href="assets/img/favicon.svg" type="image/x-icon">
     <script defer src="js/script.js"></script>
     <title>Simplon weather app</title>
 </head>
 
 <body>
-
+    <div class="card">
+        <div class="weather">
+            <h2 class="city">Weather in Poitiers</h2>
+            <h1 class="temp">45°C</h1>
+            <div class="flex">
+                <img src="./assets/img/clear.svg" class="icon"></img>
+                <div class="description">Cloudy</div>
+            </div>
+            <div class="humidity">Humidity: 60%</div>
+            <div class="rainProb">Rain probability: 15%</div>
+            <div class="wind">Wind speed: 6.2 km/h</div>
+        </div>
+    </div>
 </body>
 
 </html>
