--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="shortcut icon" href="assets/img/favicon.svg" type="image/x-icon">
-    <script defer src="js/script.js"></script>
+    <script defer type="module" src="js/script.js"></script>
     <title>Simplon weather app</title>
 </head>
 
