Added documentation and adaptative background image|Changed hour element

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
         <div class="weather">
             <div class="city-hour">
                 <h2 data-city>City</h2>
-                <p><span data-hour>Hour</span> h</p>
+                <p data-hour>Hour</p>
             </div>
 
             <section>
