--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="shortcut icon" href="assets/img/favicon.svg" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script defer type="module" src="js/script.js"></script>
     <title>Simplon weather app</title>
 </head>
@@ -18,22 +21,25 @@
                 <p data-hour>Hour</p>
             </div>
 
-            <section>
-                <div>
+            <section class="details">
+                <div class="icon-description">
                     <img src="https://openweathermap.org/img/wn/02n.png" class="icon" data-icon></img>
                     <p data-description>Description</p>
                 </div>
+
                 <div class="temp-wind-humidity">
                     <div class="temp">
-                        <h1><span data-real>Real</span> °C</h1>
-                        <p>Ressenti : <span data-feel>Feel</span> °C</p>
+                        <h1><i class="fa-solid fa-temperature-full"></i> <span data-real>Real</span> °C</h1>
+                        <p><i class="fa-solid fa-hand"></i> <span data-feel>Feel</span> °C</p>
                     </div>
-                    <div class="wind">
-                        <div data-arrow>=></div>
-                        <div><span data-speed>Speed</span> km/h</div>
-                    </div>
-                    <div class="humidity">
-                        <p>Humidité : <span data-humidity>Percent</span> %</p>
+
+                    <div class="wind-humidity">
+                        <div class="wind">
+                            <i class="fa-solid fa-wind" data-arrow></i> <span data-speed>Speed</span> km/h
+                        </div>
+                        <div class="humidity">
+                            <i class="fa-solid fa-droplet"></i> <span data-humidity>Percent</span> %
+                        </div>
                     </div>
                 </div>
             </section>
